# gst-rtsp-dynsrv

./: AUTHORS  README.md  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  main.c
src/.deps/: gst_lastsrv-main.Po
