# name of your binary
bin_PROGRAMS = rtsp-dynsrv

# list of source files
# the prefix is the name of the binary
rtsp_dynsrv_SOURCES = main.c

# list of headers we're not going to install
noinst_HEADERS =

# our CFLAGS and LDFLAGS used for compiling and linking
# make sure you prefix these with the name of your binary
rtsp_dynsrv_CFLAGS = $(GST_CFLAGS)
rtsp_dynsrv_LDFLAGS = $(GST_LIBS)
